# ELEC6200---Project-3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.py  cubemap_frontnback.py  cubemap_leftnright.py  detector.py  environment.yml  example_lidar.cpp  ffmpeg.py  fused2.pcd  helper.py  instructions.txt  lidar.cpp  lidar2.cpp  lidar_pointcloud1.pcd  lidar_pointcloud2.pcd  main.py  pointcloud_to_mesh.cpp  room_filted.pcd  run_pipeline.py
NeRF/: environment.yml  info.me  nerf_formated_data.npz  simple_nerf.py
NeRF/pipeline/: change_name.py  config.py  extract_frames.py  extract_poses.py  format_data.py  instant_nerf.py  nerf.py  nerf_renderer.py  run_pipeline.py
nerf/: instant_nerf.py  nerf.py
segmentation/: detector.py
utils/: cubemap_frontnback.py  cubemap_leftnright.py  extract_frames.py  extract_labels.py  extract_poses.py  format_data.py  visualise_package.py
visualiser/: .gitignore  LICENSE  README.md  compute_shader.py  imgui.ini  instant_nerf.py  main.py  renderer_cuda.py  renderer_nerf.py  renderer_ogl.py  requirements.txt  util.py  util_gau.py
visualiser/shaders/: gau_comp.glsl  gau_frag.glsl  gau_vert.glsl
